k8s/QA/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qrpayment-microservice
  namespace: qa-microservices
  labels:
    app: qrpayment-microservice
    app.kubernetes.io/part-of: qa-microservices
spec:
  strategy:
    type: RollingUpdate
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    matchLabels:
      app: qrpayment-microservice
      deploymentconfig: qrpayment-microservice
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: qrpayment-microservice
        deploymentconfig: qrpayment-microservice
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: qrpayment-microservice
          image: <DOCKER_IMAGE_URL>
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 200m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
