k8s/QA/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: qrpayment-microservice
  namespace: qa-microservices
spec:
  to:
    kind: Service
    name: qrpayment-microservice
  port:
    targetPort: 3000-tcp
